--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Jen-Chieh Shen",
   "license": "ISC",
   "dependencies": {
+    "directory-tree": "^2.1.0",
+    "express": "^4.16.3",
     "expresss": "0.0.0"
   }
 }
