--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "node"
+  - "node"  # Just install the latest node.
 
 before_install:
   - chmod a+x ./scripts/*.sh
