--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "directory-tree": "^2.1.0",
+    "exit": "^0.1.2",
     "express": "^4.16.3",
     "expresss": "0.0.0"
   }
